# ChangeLog for dev-python/pyproj
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyproj/ChangeLog,v 1.2 2009/06/18 19:55:04 patrick Exp $

  18 Jun 2009; Patrick Lauer <patrick@gentoo.org> pyproj-1.8.5.ebuild:
  Adding ~x86 keyword, closes bug #274635

*pyproj-1.8.5 (28 Feb 2009)

  28 Feb 2009; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +pyproj-1.8.5.ebuild:
  Initial import. Fixes #224695. Ebuild contributed by Sam Jacobson
