@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST pyenchant-1.1.5.tar.gz 63221 RMD160 1b69c72d4eb0e6c31f7bab57ccc96f5524d22381 SHA1 69f5c9ed9eb306e513a81d1a6d3afcc76fe03144 SHA256 ff4b0ac64e93bd567626f99f72671cd244e9564a2f02c108e2e61ce9d0734849
 DIST pyenchant-1.5.3.tar.gz 52551 RMD160 a9ee55e343858b3cf99025a86f00965dcb121e0b SHA1 77902775d33de49b4c1b56b6726b0321de732256 SHA256 6211319279849f0191c937c8aa897796cb66ee503ef7abd27d293227496143f8
 EBUILD pyenchant-1.1.5.ebuild 661 RMD160 65c06b285699b7f9e38c86795166acc25a1ad55c SHA1 970fc293749faedc2784c33171dc1a144c74b694 SHA256 5516bb509554b19b321982fb5492fdda262e27c9c415f7dfcec2ad1ef47e7082
-EBUILD pyenchant-1.5.3.ebuild 844 RMD160 96f7626a891afa91a43b835a344d7fe20cb1f1fe SHA1 4d789633d9b7f4d0a5d38a27758b5590fba7f0f4 SHA256 5a4973ad5287a42863fd5c7578e2f52fb2eb1a34c9ec64336e1a7357fb3601a4
-MISC ChangeLog 1598 RMD160 04002b6ecfa6cc71ab8b42cfe1438d359cc84630 SHA1 ab9208c8e3d640ddf397f26a82e5cc7f58d645ba SHA256 2e5faf55226c7e5063b66e02a03f67168cd7f2425fd60a2c1cda5a4a0f58c8a2
+EBUILD pyenchant-1.5.3.ebuild 840 RMD160 651b94e3859e67fb546485bfe8bb5055bf1cecb1 SHA1 b010941fc79cde9a789b9bffff0090c50d180433 SHA256 5aef8dfeacf4a0becfa1eac3f880fe6c6be2e4b53db3a012c1cad64067273d26
+MISC ChangeLog 1701 RMD160 30f99cc22959b9494d9e1189629befff4bec17f3 SHA1 a418b412540ab548e32a5eaaf8b508aa07936dc3 SHA256 6f81a7bd0448587a4dae2336e8bfdf85b550eabd8e29cde52ba835dd1d673c46
 MISC metadata.xml 611 RMD160 e01ed53771ed7a3bc53cca9a23f9cb12bc6cb46b SHA1 155cd755570b59419bbd33f392737ca3892fdff1 SHA256 63af15cecf80147f168cfbb44ae508094eb3bfe2f6cae2f2031dc2c213153e6b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkrxZRMACgkQkKaRLQcq0GKeVwCgp5gPTqxp27WuZ6DlLDh+3Sve
+qRUAoJudJyZuNSPCRfPhhLuce7zs1vGz
+=eOvO
+-----END PGP SIGNATURE-----
