@@ -1,4 +1,6 @@
 DIST pyproj-1.8.5.tar.gz 330383 RMD160 6d5299d6b0958ef4f16a62bf0ac713709dc52d08 SHA1 9dceaf5498191f248caa7b0948571bcf21754ec6 SHA256 6b16bfe3745006f777d8e1dd5a282cf0cb36511957a23f0f656665327ccf514e
+DIST pyproj-1.8.6.tar.gz 348693 RMD160 acdc04bd218b9bbb0d96163dd6b3a50b257d07a3 SHA1 1e9b4e6bb02e3fb81a4a3c8469e9f88b6c0f5e84 SHA256 68dc6286344b8d8a06ebc8400cf28eb2277eae41b1432aaf07f6bbf34de662f8
 EBUILD pyproj-1.8.5.ebuild 500 RMD160 f6e4d9ee75a522b445786025a4b01d3631d5e834 SHA1 089e3e3ea777a086546698b7210131b5d030f428 SHA256 ac9dfe94b7e48bab34680f8bd14ad00078369a8d3cb30fbeffb749065ec83bc8
-MISC ChangeLog 509 RMD160 9035b27503d2d93a68d23fe990087c006155922a SHA1 06726622551f70d06ebcc276736707a5eaeb91d2 SHA256 0e7e9e66e4f4a222174189ae6925a787ca8893a3255a247016b2912e0ff47800
+EBUILD pyproj-1.8.6.ebuild 580 RMD160 f0f7fb62d0700fc6022afe9e7cf218bba5a979c5 SHA1 1f5b35584b2f8b42daa0dff3372fcc1695d96c6b SHA256 6c8f2e4cc3f606dd04ea82d82bf56316ae544533b058375ac8806f4e3c3919de
+MISC ChangeLog 678 RMD160 055a2eb61515c96a835328976091468b3aa30f28 SHA1 1afaec29795617a85df007cc85d37ede5813e5fe SHA256 82fb31bd762bd62f6eafd2406fdec320e2f72148ad5e90028c98c7732dc50cd8
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
