@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/pyproj
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyproj/ChangeLog,v 1.2 2009/06/18 19:55:04 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyproj/ChangeLog,v 1.3 2009/11/04 11:25:50 arfrever Exp $
+
+*pyproj-1.8.6 (04 Nov 2009)
+
+  04 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +pyproj-1.8.6.ebuild:
+  Version bump. Set SUPPORT_PYTHON_ABIS.
 
   18 Jun 2009; Patrick Lauer <patrick@gentoo.org> pyproj-1.8.5.ebuild:
   Adding ~x86 keyword, closes bug #274635
